fix alignment issue when multiple labels inside table

--- a/app/assets/stylesheets/dsfr.scss
+++ b/app/assets/stylesheets/dsfr.scss
@@ -262,3 +262,8 @@ input[type='radio'] {
     display: none !important;
   }
 }
+
+// We want labels to be centered inside dossiers table
+.fr-table .fr-tags-group .fr-tag {
+  margin-top: 0.5rem;
+}
